@@ -1,0 +1,19 @@
+<?xml version="1.0"?>
+<object name="portal_actions" meta_type="Plone Actions Tool"
+        xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+  <object name="object_buttons" meta_type="CMF Action Category">
+    <object name="delete_repository" meta_type="CMF Action" i18n:domain="plone">
+      <property name="title" i18n:translate="">Delete</property>
+      <property name="description" i18n:translate=""></property>
+      <property
+          name="url_expr">string:${globals_view/getCurrentObjectUrl}/delete_repository</property>
+      <property name="link_target"></property>
+      <property name="icon_expr"></property>
+      <property name="available_expr">python: here.restrictedTraverse('is_deletion_allowed')()</property>
+      <property name="permissions">
+        <element value="Delete objects"/>
+      </property>
+      <property name="visible">True</property>
+    </object>
+  </object>
+</object>
